deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quelpoke-tony
  namespace: tony
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/tony: monapp-tony
  template:
    metadata:
      labels:
        app.kubernetes.io/tony: monapp-tony
    spec:
      containers:
      - name: monapp-tony
        image: europe-west9-docker.pkg.dev/infal-devops-sysops/student-tony/monapp:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
