service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tony
  namespace: tony
spec:
  selector:
    app.kubernetes.io/tony: monapp-tony
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
