httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: quelpoke-tony
  namespace: tony
spec:
  parentRefs:
  - kind: Gateway
    name: external-http-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /tony
    backendRefs:
    - name: service-tony
      port: 8080
